--- a/client/tables.html
+++ b/client/tables.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
   <meta charset="UTF-8">
   <title>Tables Page</title>
 
@@ -15,10 +12,137 @@
 
 <body>
 
+  <div class="container">
+
+    <div class="jumbotron">
+      <h1 class="text-center"><span class="fa fa-fire"></span> Hot Restaurant</h1>
+      <hr>
+      <h2 class="text-center">Current Reservations and Waiting List</h2>
+      <br>
+
+      <div class="text-center">
+        <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
+        <a href="/home"><button class="btn btn-lg btn-default"><span class="fa fa-home"></span></button></a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12">
+
+        <!-- Current Tables in Use -->
+        <div class="card">
+          <div class="card-header">
+            <h4>Current Reservations</h4>
+          </div>
+          <div class="card-body">
+            <ul id="tableList" class="list-group"><li class="list-group-item mt-4"><h2>Table #1</h2><hr><h2>ID: ads</h2><h2>Name: dsfa</h2><h2>Email: asdfa</h2><h2>Phone: asdfas</h2></li><li class="list-group-item mt-4"><h2>Table #2</h2><hr><h2>ID: Katethespy</h2><h2>Name: Kate</h2><h2>Email: kate@gmail.com</h2><h2>Phone: 325 258 9875</h2></li><li class="list-group-item mt-4"><h2>Table #3</h2><hr><h2>ID: Jakethemaster</h2><h2>Name: JAke</h2><h2>Email: jake@gmail.com</h2><h2>Phone: 347 895 2588</h2></li><li class="list-group-item mt-4"><h2>Table #4</h2><hr><h2>ID: guruyoda</h2><h2>Name: yoda guru</h2><h2>Email: guru@gmail.com</h2><h2>Phone: 654 952 2585</h2></li><li class="list-group-item mt-4"><h2>Table #5</h2><hr><h2>ID: dfjka;</h2><h2>Name: hello</h2><h2>Email: klfhs</h2><h2>Phone: 456 6588 215</h2></li></ul>
+          </div>
+        </div>
+
+        <!-- Waiting List Card -->
+        <div class="card mt-4">
+          <div class="card-header">
+            <h4>Waiting List</h4>
+          </div>
+          <div class="card-body">
+            <ul id="waitList" class="list-group"><li class="list-group-item mt-4"><h2>Table #1</h2><hr><h2>ID: Kate</h2><h2>Name: Kate</h2><h2>Email: live@live.com</h2><h2>Phone: 800-123-4567</h2></li><li class="list-group-item mt-4"><h2>Table #2</h2><hr><h2>ID: ME!</h2><h2>Name: me</h2><h2>Email: me@me.com</h2><h2>Phone: 222 222 2222</h2></li></ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <footer class="footer mt-4">
+      <div class="container">
+        <p>Control Panel</p>
+        <p><a href="#" id="clear">Clear Table</a> | <a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API
+            Wait List</a>
+      </p></div>
+    </footer>
+
+  </div>
+
+<script type="text/javascript">
+
+  function runTableQuery() {
+    $.ajax({ url: "/api/tables", method: "GET" })
+      .then(function(tableData) {
+        console.log(tableData);
+        console.log("------------------------------------");
+        for (var i = 0; i < tableData.length; i++) {
+
+          // Get a reference to the tableList element and populate it with tables
+          var tableList = $("#tableList");
+
+          // Then display the fields in the HTML (Section Name, Date, URL)
+          var listItem = $("<li class='list-group-item mt-4'>");
+
+          listItem.append(
+            $("<h2>").text("Table #" + (i + 1)),
+            $("<hr>"),
+            $("<h2>").text("ID: " + tableData[i].customerName),
+            $("<h2>").text("Name: " + tableData[i].phoneNumber),
+            $("<h2>").text("Email: " + tableData[i].customerEmail),
+            $("<h2>").text("Phone: " + tableData[i].customerID)
+          );
+
+          tableList.append(listItem);
+        }
+      });
+  }
+
+  function runWaitListQuery() {
+
+    $.ajax({ url: "/api/waitlist", method: "GET" })
+      .then(function(waitData) {
+        console.log(waitData);
+        console.log("------------------------------------");
+
+        // Loop through and display each of the customers
+        for (var i = 0; i < waitData.length; i++) {
+
+          // Get a reference to the waitList element and populate it with tables
+          var waitList = $("#waitList");
+
+          // Then display the fields in the HTML (Section Name, Date, URL)
+          var listItem = $("<li class='list-group-item mt-4'>");
+
+          listItem.append(
+            $("<h2>").text("Table #" + (i + 1)),
+            $("<hr>"),
+            $("<h2>").text("ID: " + waitData[i].customerID),
+            $("<h2>").text("Name: " + waitData[i].customerName),
+            $("<h2>").text("Email: " + waitData[i].customerEmail),
+            $("<h2>").text("Phone: " + waitData[i].phoneNumber)
+          );
+
+          waitList.append(listItem);
+        }
+      });
+  }
+
+  // This function resets all of the data in our tables. This is intended to let you restart a demo.
+  function clearTable() {
+    alert("Clearing...");
+
+    // Clear the tables on the server and then empty the elements on the client
+    $.ajax({ url: "/api/clear", method: "POST" }).then(function() {
+      $("#waitList").empty();
+      $("#tableList").empty();
+    });
+  }
+
+  $("#clear").on("click", clearTable);
+
+
+  // Run Queries!
+  // ==========================================
+  runTableQuery();
+  runWaitListQuery();
+
+
+</script>
 
 
 </body>
-
-
-
 </html>
